--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,229 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.header{
+  display:flex;
+  width: 48%;
+  margin-left: 25%;
+  font-size: 25px;
+  padding:1% ;
+
+
+}
+.alert-box{
+  display:flex;
+  width: 48%;
+  margin-left: 25%;
+  position: fixed;
+  top:0px;
+  font-size: 25px;
+  padding:1% ;
+ 
+}
+.main-body{
+  display:flex;
+  flex-flow:column;
+  width: 50%;
+  min-width: 600px;
+  margin-left: 25%;
+  font-size: 25px;
+
+  
+}
+
+.new-task{
+  display:flex;
+  flex-flow: column;
+  width: 100%;
+  font-size: 25px;
+  margin: 0px;
+  padding: 0px;
+  margin-top: 10px;
+  border:1px solid black;
+  border-radius: 5px;
+}
+.heading{
+  display:flex;
+  width: 96%;
+  border-bottom: 1px solid black;
+  font-size: 25px;
+  padding:2%;
+  background-color: #E2E3E5;
+  
+}
+.inputbox{
+display:flex;
+flex-wrap: wrap;
+}
+.project-name{
+  flex-flow: column;
+  width:45%;
+  margin-left: 10px;
+  
+}
+.projectName{
+  margin: 5px;
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.inputproject{
+  margin:5px;
+  margin-top: 0px;
+  font-size: 16px;
+  font-weight: bolder;
+  width: 80%;
+}
+.technology-name{
+  flex-flow: column;
+  width:45%;
+  
+  
+}
+.technologyName{
+  margin: 5px;
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.inputtechnology{
+  margin:5px;
+  margin-top: 0px;
+  font-size: 16px;
+  font-weight: bolder;
+  width: 80%;
+}
+.addButton{
+  padding:5px;
+  padding-left: 10px;
+  font-size:16px;
+  font-weight: bolder;
+  margin:10px;
+  margin-left: 15px;
+  padding-right: 20px;
+  
+  border-radius: 4px;
+  background-color: rgb(0, 167, 244);
+  color: white;
+}
+.tasks{
+  display:flex;
+  position: relative;
+  flex-flow: column;
+  width: 100%;
+  font-size: 25px;
+  margin: 0px;
+  margin-top: 10px;
+  padding: 0px;
+  border:1px solid black;
+  border-radius: 5px;
+}
+
+.display-heading{
+  display:flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  
+}
+.box1,.box2{
+  width:29%;
+  font-size: 20px;
+  padding-left: 2%;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+.box3{
+  width:20%;
+  padding-left: 1%;
+  font-size: 20px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+.action-heading{
+  width:16%;
+  padding-left: 1%;
+  font-size: 20px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.task-list{
+  width:100%;
+  height:220px;
+  overflow: hidden;
+
+}
+
+
+.heading1{
+  display:flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  
+}
+
+.box11,.box21{
+  width:29%;
+  font-size: 18px;
+  padding-left: 2%;
+  font-weight: 200;
+  padding-bottom: 10px;
+}
+.box31{
+  width:20%;
+  padding-left: 1%;
+  font-size: 18px;
+  font-weight: 200;
+  padding-bottom: 10px;
+}
+.complete3{
+  width:15%;
+  padding-left: 1%;
+  font-size: 18px;
+  font-weight: 200;
+  
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+
+.colored{
+  background-color: antiquewhite;
+}
+.footer{
+  display:flex;
+  flex-flow:row;
+  margin: 10px;
+  
+}
+.footer1{
+  margin:2px;
+ border-radius: 4px;
+  padding: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-size: 20px;
+}
+.previous,.next{
+  background-color: rgb(0, 167, 244);
+  
+}
+.success{
+  display: flex;
+  width:95%;
+  background-color: #D4EDDA;
+  font-size: 25px;
+  color: green;
+  padding-left: 5%;
+}
+.failure{
+  display: flex;
+  width:95%;
+  background-color: #FFF3CD;
+  font-size: 25px;
+  color: orangered;
+  padding-left: 5%;
+}
